--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <div class="collapse navbar-collapse" id="main_nav">
                         <ul class="navbar-nav justify-content-evenly">
                             <li class="nav-item "> <a class="nav-link active" href="#">Home </a> </li>
-                            <li class="nav-item"><a class="nav-link" href="#"> About </a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"> Services </a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"> Work </a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"> Blog </a></li>
+                            <li class="nav-item"><a class="nav-link" href="#about"> About </a></li>
+                            <li class="nav-item"><a class="nav-link" href="#services"> Services </a></li>
+                            <li class="nav-item"><a class="nav-link" href="#portfolio"> Work </a></li>
+                            <li class="nav-item"><a class="nav-link" href="#blog"> Blog </a></li>
                             <li class="nav-item1 dropdown">
                                 <a class="nav-link  dropdown-toggle" href="#" id="bb" data-bs-auto-close="outside"
                                     data-bs-toggle="dropdown">Drop Down</a>
@@ -48,7 +48,7 @@
 
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="#"> Contact </a></li>
+                            <li class="nav-item"><a class="nav-link" href="#contact"> Contact </a></li>
                         </ul>
                     </div> <!-- navbar-collapse.// -->
                 </div> <!-- container.// -->
@@ -146,7 +146,7 @@
     </section>
     <!-- End of About -->
     <!-- Start of services-->
-    <section id="services " class="py-5">
+    <section id="services" class="py-5">
         <div class="container ">
             <div class="section-title text-center">
                 <h2>SERVICES</h2>
@@ -325,7 +325,7 @@
     </section>
     <!-- End of counter -->
     <!-- Start of PORTFOLIO -->
-    <section id="PORTFOLIO" class="work py-5">
+    <section id="portfolio" class="work py-5">
         <div class="container">
             <div class="section-title text-center mb-5">
                 <h2>PORTFOLIO</h2>
@@ -787,7 +787,7 @@
                     <div class="copyright-box">
                         <p class="copyright">© Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
                         <div class="credits">
-                            Designed by <a href="">BootstrapMade</a>
+                            Designed by <a href="">Hussein Hashima</a>
                         </div>
                     </div>
                 </div>
